[metadata]
name = git_config
version = 1.0.0
author = Roshan Acharya
author_email = acharyaroshan2357@gmail.com
description = Get local or global git config as a dictionary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coderosh/git_config
license= MIT
project_urls =
    Documentation = https://github.com/coderosh/git_config#readme
    Bug Tracker = https://github.com/coderosh/git_config/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >3
